Updated to newest java 8 - 401